[package]
name = "ntuplewriter"
version = "0.2.0"
edition = "2021"

[dependencies]
hepmc2 = { version = "0.5", optional = true }
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.60"
cc = "1.0"

[features]
# evil hack: necessary for tests to ensure proper linker flags
test = []

[dev-dependencies]
ntuplereader = { version = "0.1", git = "https://github.com/a-maier/ntuplereader.git" }
tempfile = "3.3"
