[package]
name = "ntuple"
version = "0.8.0"
edition = "2021"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Read and write ntuple ROOT files"
license = "GPL-3.0-or-later"
repository = "https://github.com/a-maier/ntuple"

[dependencies]
hepmc2 = { version = "0.5", optional = true }
thiserror = "1.0"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.66"
cc = "1.0"

[dev-dependencies]
tempfile = "3.3"
