[package]
name = "ntuple"
version = "0.9.1"
edition = "2021"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Read and write ntuple ROOT files"
license = "GPL-3.0-or-later"
repository = "https://github.com/a-maier/ntuple"

[dependencies]
hepmc2 = { version = "0.7", optional = true }
thiserror = "1.0"
get-root-flags = "0.1.0"

[build-dependencies]
anyhow = "1.0"
bindgen = "0.69"
cc = "1.0"
get-root-flags = "0.1.0"

[dev-dependencies]
tempfile = "3.3"
